# Multi-armed-bandit-RL

./: .gitignore  CMakeLists.txt  Makefile.simulation  README.md  mainBernoulli.cc  main_simulation.cc
include/: Experiment.h
src/: Bandit.cc  BernoulliBandit.cc  Experiment.cc  NormalBandit.cc
